# giam

./: 0-agi.md  1-super.md  2-ultra.md  3-hyper.md  4-supreme.md  5-ultimate.md  6-transcendent.md  Cargo.toml  README.md  white_paper.md
src/: actor.rs  api.rs  autonomy.rs  benchmark.rs  capability.rs  capability_registry.rs  config.rs  constraint.rs  content.rs  core.rs  error.rs  events.rs  execution.rs  goals.rs  integration_tests.rs  intent.rs  lib.rs  memory.rs  metrics.rs  multi_agent.rs  optimization.rs  planning.rs  provenance.rs  routing.rs  safety.rs  self_evolution.rs  session.rs  substrate.rs  temporal.rs  trace.rs  validation.rs  workflow.rs
