[package]
name = "giam"
version = "0.1.0"
edition = "2021"
authors = ["GIAM Team <team@giam.dev>"]
description = "General Intelligence Ascension Model - A framework for building tiered intelligence systems"
license = "MIT"
repository = "https://github.com/dustlang/giam"
readme = "README.md"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-doccfg"]